--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
   "dependencies": {
     "axios": "^1.7.7",
     "jwt-decode": "^4.0.0",
+    "mobx": "^6.13.3",
+    "mobx-react-lite": "^4.0.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.26.2"
   },
